--- a/analysis-complete-case/analysis-H3-baseline-moderators.Rmd
+++ b/analysis-complete-case/analysis-H3-baseline-moderators.Rmd
@@ -2038,7 +2038,7 @@ summary(fit1, show_control_fit = TRUE)
 ```{r}
 fit <- fit1
 
-vals_to_display <- seq(1,7,0.05)
+vals_to_display <- seq(3,7,0.05)
 
 Lmat <- matrix(c(rep(1, length(vals_to_display)),
                  vals_to_display),
@@ -2093,12 +2093,12 @@ dat_result_exp_output %>% write.csv(., file.path("analysis-complete-case", "form
 ```
 
 ```{r}
-dat_plot <- data.frame(val = vals_to_display, est = exp_estimates[3:123], rrLB95 = rrLB95[3:123], rrUB95 = rrUB95[3:123])
+dat_plot <- data.frame(val = vals_to_display, est = exp_estimates[3:83], rrLB95 = rrLB95[3:83], rrUB95 = rrUB95[3:83])
 
 dat_plot
 
 g <- ggplot(data = dat_plot, aes(x = val, y = est, ymin = rrLB95, ymax = rrUB95))
-g <- g + geom_abline(slope = 0, intercept = 1, color = "red", linewidth = 1) + geom_ribbon(alpha = 0.3) + geom_line(linewidth = 2) + scale_y_continuous(limits = c(0.5,3.5), breaks = seq(0.5, 3.5, 0.5), name = "Risk Ratio and 95% CI's") + scale_x_continuous(name = "Value of Gratitude", breaks = c(1,2,3,4,5,6,7), labels = c(1,2,3,4,5,6,7))
+g <- g + geom_abline(slope = 0, intercept = 1, color = "red", linewidth = 1) + geom_ribbon(alpha = 0.3) + geom_line(linewidth = 2) + scale_y_continuous(limits = c(0.75,2.25), breaks = seq(0.75, 2.25, 0.25), name = "Risk Ratio and 95% CI's") + scale_x_continuous(name = "Value of Gratitude", breaks = c(3,4,5,6,7), labels = c(3,4,5,6,7))
 
 g
 
@@ -2107,12 +2107,12 @@ ggsave(filename = file.path("analysis-complete-case", "formatted-output", "H3-ba
 
 
 ```{r}
-dat_plot <- data.frame(val = vals_to_display, est = exp_estimates[3:123], rrLB90 = rrLB90[3:123], rrUB90 = rrUB90[3:123])
+dat_plot <- data.frame(val = vals_to_display, est = exp_estimates[3:83], rrLB90 = rrLB90[3:83], rrUB90 = rrUB90[3:83])
 
 dat_plot
 
 g <- ggplot(data = dat_plot, aes(x = val, y = est, ymin = rrLB90, ymax = rrUB90))
-g <- g + geom_abline(slope = 0, intercept = 1, color = "red", linewidth = 1) + geom_ribbon(alpha = 0.3) + geom_line(linewidth = 2) + scale_y_continuous(limits = c(0.5,3.5), breaks = seq(0.5, 3.5, 0.5), name = "Risk Ratio and 90% CI's") + scale_x_continuous(name = "Value of Gratitude", breaks = c(1,2,3,4,5,6,7), labels = c(1,2,3,4,5,6,7))
+g <- g + geom_abline(slope = 0, intercept = 1, color = "red", linewidth = 1) + geom_ribbon(alpha = 0.3) + geom_line(linewidth = 2) + scale_y_continuous(limits = c(0.75,2.25), breaks = seq(0.75, 2.25, 0.25), name = "Risk Ratio and 90% CI's") + scale_x_continuous(name = "Value of Gratitude", breaks = c(3,4,5,6,7), labels = c(3,4,5,6,7))
 
 g
 
@@ -2148,6 +2148,10 @@ dat_for_summary <- dat_for_analysis_elig %>% select(participant_id, gratitude) %
 
 mu <- mean(dat_for_summary$gratitude, na.rm = TRUE)
 std_dev <- sd(dat_for_summary$gratitude, na.rm = TRUE)
+
+out <- data.frame(mu = mu, std_dev = std_dev)
+
+print(out)
 ```
 
 ```{r}
@@ -2232,7 +2236,7 @@ dat_plot <- data.frame(val = vals_to_display, est = exp_estimates[3:11], rrLB95 
 dat_plot
 
 g <- ggplot(data = dat_plot, aes(x = val, y = est, ymin = rrLB95, ymax = rrUB95))
-g <- g + geom_abline(slope = 0, intercept = 1, color = "red", linewidth = 1) + geom_ribbon(alpha = 0.3) + geom_line(linewidth = 2) + scale_y_continuous(limits = c(0.75,2), breaks = seq(0.75, 2, 0.25), name = "Risk Ratio and 95% CI's") + scale_x_continuous(name = "Number of standard deviations above or below mean of gratitude", breaks = seq(-2,2,0.5), labels = seq(-2,2,0.5))
+g <- g + geom_abline(slope = 0, intercept = 1, color = "red", linewidth = 1) + geom_ribbon(alpha = 0.3) + geom_line(linewidth = 2) + scale_y_continuous(limits = c(0.75,2.25), breaks = seq(0.75, 2.25, 0.25), name = "Risk Ratio and 95% CI's") + scale_x_continuous(name = "Number of standard deviations above or below mean of gratitude", breaks = seq(-2,2,0.5), labels = seq(-2,2,0.5))
 
 g
 
@@ -2245,7 +2249,7 @@ dat_plot <- data.frame(val = vals_to_display, est = exp_estimates[3:11], rrLB90 
 dat_plot
 
 g <- ggplot(data = dat_plot, aes(x = val, y = est, ymin = rrLB90, ymax = rrUB90))
-g <- g + geom_abline(slope = 0, intercept = 1, color = "red", linewidth = 1) + geom_ribbon(alpha = 0.3) + geom_line(linewidth = 2) + scale_y_continuous(limits = c(0.75,2), breaks = seq(0.75, 2, 0.25), name = "Risk Ratio and 90% CI's") + scale_x_continuous(name = "Number of standard deviations above or below mean of gratitude", breaks = seq(-2,2,0.5), labels = seq(-2,2,0.5))
+g <- g + geom_abline(slope = 0, intercept = 1, color = "red", linewidth = 1) + geom_ribbon(alpha = 0.3) + geom_line(linewidth = 2) + scale_y_continuous(limits = c(0.75,2.25), breaks = seq(0.75, 2.25, 0.25), name = "Risk Ratio and 90% CI's") + scale_x_continuous(name = "Number of standard deviations above or below mean of gratitude", breaks = seq(-2,2,0.5), labels = seq(-2,2,0.5))
 
 g
 
